# kb_index

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
kb_core/: Cargo.toml
kb_core/src/: lib.rs
kb_core/src/chroma/: mod.rs
kb_core/src/cli/: commands.rs  mod.rs
kb_core/src/cli/commands/: config.rs  index.rs  mod.rs  query.rs  session.rs
kb_core/src/config/: mod.rs
kb_core/src/embedding/: mod.rs
kb_core/src/llm/: mod.rs
kb_core/src/state/: mod.rs
kb_core/src/utils/: mod.rs
kb_index/: Cargo.toml
kb_index/src/: main.rs
src/: main.rs
src/config/: mod.rs
src/embedding/: mod.rs
