[package]
name = "kb_index"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
console = "0.15.11"
grep-regex = "0.1.13"
grep-searcher = "0.1.14"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
walkdir = "2.5.0"
syntect = { version = "5", features = ["default-fancy"] }
two-face = { version = "0.4.3", features = ["syntect-default-onig"] }
dirs = "6.0.0"
toml = "0.8.22"
